Added feign client to user-service for communication with portfolio-snalysis-service